--- a/src/TurbineCalculator.css
+++ b/src/TurbineCalculator.css
@@ -1,5 +1,48 @@
 /* TurbineCalculator component styles */
 
+.turbine-calculator {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+}
+
+.turbine-calculator h1 {
+	margin: 1rem;
+	margin-bottom: 0;
+	align-self: flex-start;
+	flex-grow: 1;
+	font-size: 1.5rem;
+	font-weight: normal;
+}
+
+.results .unit {
+	font-size: 1.5rem;
+	font-weight: normal;
+}
+
+.results {
+	margin: 1% 1rem;
+	text-align: right;
+	font-size: 3.5rem;
+	font-weight: normal;
+}
+
 .inputs {
-	max-width: 40rem;
+	margin: 0 1rem 1rem 1rem;
+	padding: 0.75rem;
+	background-color: rgba(255, 255, 255, 0.5);
+	border-radius: 10px;
+	min-width: 300px;
+}
+
+@media (orientation: landscape) {
+	.inputs { 
+		align-self: flex-end;
+		width: 50%;
+	}
+
+	.results {
+		margin: 0 1rem;
+	}
 }
