--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:500|Roboto+Slab:400&display=swap');
+
 body {
   margin: 0;
-  font-family: Roboto, Helvetica, sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
+  font-weight: 500;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto Slab', 'Roboto', Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+html, body, #root {
+	height: 100%;
 }
