--- a/src/TurbineVisual.css
+++ b/src/TurbineVisual.css
@@ -1,1 +1,10 @@
 /* TurbineVisual component styles */
+
+.turbine-visual svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
