Add basic svg background with turbine.

--- a/src/TurbineVisual.css
+++ b/src/TurbineVisual.css
@@ -8,3 +8,73 @@
   width: 100%;
   z-index: -1;
 }
+
+.cls-1 {
+  fill: url(#linear-gradient);
+}
+
+.sky {
+  fill: url(#sky-gradient);
+}
+
+.mountain-far {
+  fill: url(#mountain-far-gradient);
+}
+
+.mountain-near {
+  fill: url(#mountain-near-gradient);
+}
+
+.hills {
+  fill: url(#hills-gradient);
+}
+
+.sea {
+  fill: url(#sea-gradient);
+}
+
+.tower {
+  fill: url(#linear-gradient-6);
+}
+
+.outer-circle {
+  fill: none;
+  stroke: #fff;
+  stroke-miterlimit: 10;
+}
+
+.axil {
+  fill: url(#radial-gradient-2);
+}
+
+.windstream {
+  opacity: 0.5;
+}
+
+.cls-10 {
+  fill: url(#linear-gradient-7);
+}
+
+.cls-11 {
+  fill: url(#linear-gradient-8);
+}
+
+.cls-12 {
+  fill: url(#linear-gradient-9);
+}
+
+.cls-13 {
+  fill: url(#linear-gradient-10);
+}
+
+.cls-14 {
+  fill: url(#linear-gradient-11);
+}
+
+.cls-15 {
+  fill: url(#linear-gradient-12);
+}
+
+.cls-16 {
+  fill: url(#linear-gradient-13);
+}
