--- a/src/TurbineCalculator.css
+++ b/src/TurbineCalculator.css
@@ -12,7 +12,7 @@
 	margin-bottom: 0;
 	align-self: flex-start;
 	flex-grow: 1;
-	font-size: 1.5rem;
+	font-size: 7.5vmin;
 	font-weight: normal;
 }
 
