Add TurbineBlade component with animation

--- a/src/TurbineVisual.css
+++ b/src/TurbineVisual.css
@@ -1,6 +1,6 @@
 /* TurbineVisual component styles */
 
-.turbine-visual svg {
+.turbine-visual .root-svg {
   position: absolute;
   top: 0;
   left: 0;
