--- a/src/TurbineCalculator.css
+++ b/src/TurbineCalculator.css
@@ -12,7 +12,7 @@
 	margin-bottom: 0;
 	align-self: flex-start;
 	flex-grow: 1;
-	font-size: 7.5vmin;
+	font-size: 7.0vmin;
 	font-weight: normal;
 }
 
@@ -23,15 +23,27 @@
 
 .results {
 	margin: 1% 1rem;
+}
+
+.results h2, .results h3 {
 	text-align: right;
-	font-size: 3.5rem;
 	font-weight: normal;
+}
+
+.results h2 {
+	font-size: 4rem;
+	margin: 0;
+}
+
+.results h3 {
+	line-height: 0.75rem;
+	margin-top: 0;
 }
 
 .inputs {
 	margin: 0 1rem 1rem 1rem;
 	padding: 0.75rem;
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: rgba(255, 255, 255, 0.25);
 	border-radius: 10px;
 	min-width: 300px;
 }
