--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ h1, h2, h3, h4, h5, h6 {
   font-style: normal;
 }
 
+h3, h4, h5, h6 {
+  font-family: 'Roboto', Helvetica, sans-serif;
+  font-style: italic;
+}
+
 html, body, #root {
 	height: 100%;
 }
