--- a/src/TurbineCalculator.css
+++ b/src/TurbineCalculator.css
@@ -3,17 +3,11 @@
 .turbine-calculator {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	height: 100%;
 }
 
-.turbine-calculator h1 {
-	margin: 1rem;
-	margin-bottom: 0;
-	align-self: flex-start;
-	flex-grow: 1;
-	font-size: 7.0vmin;
-	font-weight: normal;
+.results {
+	text-align: right;
+	margin-bottom: 2rem;
 }
 
 .results .unit {
@@ -21,40 +15,43 @@
 	font-weight: normal;
 }
 
-.results {
-	margin: 1% 1rem;
-}
-
 .results h2, .results h3 {
-	text-align: right;
 	font-weight: normal;
+	margin: 0;
 }
 
 .results h2 {
-	font-size: 4rem;
+	font-size: 5rem;
 	margin: 0;
 }
 
 .results h3 {
-	line-height: 0.75rem;
+	line-height: 1.5rem;
 	margin-top: 0;
 }
 
 .inputs {
-	margin: 0 1rem 1rem 1rem;
-	padding: 0.75rem;
-	background-color: rgba(255, 255, 255, 0.25);
-	border-radius: 10px;
-	min-width: 300px;
+	min-width: 400px;
 }
 
-@media (orientation: landscape) {
-	.inputs { 
-		align-self: flex-end;
-		width: 50%;
+.inputs {
+	padding: 0.75rem;
+	background-color: rgba(255, 255, 255, 0.35);
+	border-radius: 10px;
+}
+
+@media (orientation: landscape) and (min-width: 896px) {
+	.turbine-calculator {
+		align-items: flex-end;
+		flex-direction: column-reverse;
+		padding-right: 2rem;
+	}
+
+	.inputs {
+		margin-top: 1rem;
 	}
 
 	.results {
-		margin: 0 1rem;
+		margin-top: 3rem;
 	}
 }
