--- a/src/TurbineVisual.css
+++ b/src/TurbineVisual.css
@@ -1,7 +1,7 @@
 /* TurbineVisual component styles */
 
 .turbine-visual, .turbine-visual .root-svg {
-  position: absolute;
+  position: fixed;
   box-sizing: border-box;
   top: 0;
   left: 0;
